kustomizations/streaming/downloaders/qbittorrent/server-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
spec:
  serviceName: "qbittorrent-headless"
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
        app.kubernetes.io/name: qbittorrent
        app.kubernetes.io/part-of: streaming-stack
    spec:
      containers:
      # VPN Sidecar
      - name: gluetun
        image: qmcgaw/gluetun:latest
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
        volumeMounts:
        - name: config
          mountPath: /config/qBittorrent
        - name: tun
          mountPath: /dev/net/tun

      # Torrent Downloader
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:latest
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "sleep 10 && /scripts/check-port-daemon.sh &"]
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1
            memory: 2Gi
        volumeMounts:
        - name: config
          mountPath: /config/qBittorrent
        - name: script-volume
          mountPath: /scripts/check-port-daemon.sh
          subPath: check-port-daemon.sh
        - name: downloads
          mountPath: /downloads
        - name: latteam
          mountPath: /LatTeam

      nodeSelector:
        kubernetes.io/hostname: catimore
      volumes:
      - name: tun
        hostPath:
          path: /dev/net/tun
      - name: script-volume
        configMap:
          name: qbittorrent-port-updater
          defaultMode: 0755
      - name: config
        hostPath:
          path: /mnt/qbittorrent
          type: DirectoryOrCreate
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads-pvc
      - name: latteam
        hostPath:
          path: /media/multimedia/LatTeam
          type: DirectoryOrCreate
