kustomizations/streaming/downloaders/qbittorrent/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: qbittorrent.citocafecito.work
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: qbittorrent-web
              port:
                number: 8080
